--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -51,6 +51,10 @@ table.GridView td.set {
   box-shadow: 1px 1px 4px;
   background-color: hsla(0,0%,100%,0.8);
 }
+.divIcon.selected {
+  box-shadow: 2px 5px 10px hsl(50,90%,30%);
+  background-color: hsla(50,98%,95%,1);
+}
 .predictTemp {
   color: hsla(100,30%,40%,1);
 }
