All basic functionality restored: - student selection of weather stations - student entry of predictions - teacher display of weather station data - teacher display of weather station predictions - teacher enable/disable of student predictions - changing teacher options updates teacher view automatically
LeafletMapMarker, weather.css:
- add `@observer` so it responds to changes
- fix null tests in `actualTempDiv` and `diffTempDiv`
- fix difference presentation in `diffTempDiv`
- rename `difTemp` => `diffTemp`

PredictionView:
- uses actual weather station temperature in prompt
- `submitPrediction` uses actual simulation time; converts numeric values appropriately

WeatherStationConfigView:
- `setBasestation()` => `setStation()` and improve implementation
- `renderBaseOptions()` => `renderStationList()` and improve implementation

Prediction:
- `predictionTime` and `predictedTime` are `types.Date`
- `timeStamp` defaults to `new Date()` (so clients don't have to)
- add `setStation()` action

Simulation:
- call `initPresence()` to initialize presence in `afterCreate()`
- check for presence of stations before deciding whether to initialize them
- eliminate `preProcessSnapshot()` (the properties it was setting are being initialized properly)

WeatherStation, WeatherStationStore, WeatherStationView, etc.:
- rename `callsign` => `callSign` (consistent capitalization)

PredictionStore:
- `addPrediction()` uses selected presence station rather than requiring client to specify it
- add missing definition of `IPredictionStore`

PresenceStore:
- rename `getCurrentPresence()` to `initPresence()`

SimulationStore:
- add types to existing accessor functions: `timeString()`, `settings()`, `predictions()`, `presences()`, `stations()`, etc.
- add new typed accessor functions: `selectedPresence()`, `presenceStation()`, `selectedStation()`
- fix implementation of `simulationTime()` accessor
- use `.values()` instead of `.toJSON()` for map iteration

WeatherStationStore:
- rename `stati

--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -61,7 +61,7 @@ table.GridView td.set {
 .actualTemp {
   color: hsla(100,0%,20%,1);
 }
-.difTemp {
+.diffTemp {
   display: flex;
   flex-direction: column;
   justify-content: center;
