--- a/src/html/fonts.css
+++ b/src/html/fonts.css
@@ -1,9 +1,10 @@
+/* These fonts generated from https://icomoon.io/ using 'material' icon font  */
 @font-face {
   font-family: 'weather-fonts';
   src:
-    url('fonts/weather-fonts.ttf?huaiht') format('truetype'),
-    url('fonts/weather-fonts.woff?huaiht') format('woff'),
-    url('fonts/weather-fonts.svg?huaiht#weather-fonts') format('svg');
+    url('fonts/weather-fonts.ttf?qfprqx') format('truetype'),
+    url('fonts/weather-fonts.woff?qfprqx') format('woff'),
+    url('fonts/weather-fonts.svg?qfprqx#weather-fonts') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -23,8 +24,14 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-face:before {
-  content: "\e87c";
+.icon-fast_forward:before {
+  content: "\e01f";
+}
+.icon-fast_rewind:before {
+  content: "\e020";
+}
+.icon-pause:before {
+  content: "\e034";
 }
 .icon-pause_circle_filled:before {
   content: "\e035";
@@ -32,14 +39,20 @@
 .icon-pause_circle_outline:before {
   content: "\e036";
 }
+.icon-play_arrow:before {
+  content: "\e037";
+}
 .icon-play_circle_filled:before {
   content: "\e038";
 }
 .icon-play_circle_outline:before {
   content: "\e039";
 }
-.icon-record_voice_over:before {
-  content: "\e91f";
+.icon-refresh:before {
+  content: "\e5d5";
+}
+.icon-skip_next:before {
+  content: "\e044";
 }
 .icon-skip_previous:before {
   content: "\e045";
