Add setting for wind speed display unit (mph/kph) - add `formatWindSpeed()` function to `SimulationSettings` - add `formatWindSpeed()` forwarder to `SimulationStore` - `LeafletMapMarker`, `PredictionView`, `WeatherStationView` use `formatWindSpeed()` - eliminate `strWindSpeed()` functions from `WeatherStation` and `WeatherStationState`

--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -71,6 +71,9 @@ table.GridView td.set {
   font-size: 0.8em;
   border-radius: 0.25em;
 }
+.windSpeedUnit {
+  font-size: .6em;
+}
 .divIconContent {
   font-size: 8pt;
 }
