Add sign out button to student weather station page [#154780345] - sets firebase connection to offline - signs out from firebase - clears presence from simulation in firebase - clears the values from the weather station view - puts up a "Good bye!" message - prevents navigation to other tabs

--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -80,3 +80,9 @@ table.GridView td.set {
 .divIconContent {
   font-size: 8pt;
 }
+
+.weather-station-exit-button button {
+  position: absolute !important;
+  bottom: 0px;
+  width: 160px;
+}
