--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -81,6 +81,24 @@ table.GridView td.set {
   font-size: 8pt;
 }
 
+.teacher-cell-popover-contents {
+  padding: 8px;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.3em;
+}
+
+.teacher-cell-popover-contents .station-id {
+  font-size: 32px;
+  text-align: center;
+  line-height: 1.5em;
+  margin-bottom: 4px;
+}
+
+.teacher-cell-popover-contents .group {
+  margin-top: 8px;
+}
+
 .weather-station-exit-button button {
   position: absolute !important;
   bottom: 0px;
