Add more options button to teacher page - drawer slides out from right side with options:   - `Disconnect All` item disconnects all student presences [#154671568] - replace `Copy Student URL` button with icon button with tooltip

--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -99,6 +99,21 @@ table.GridView td.set {
   margin-top: 8px;
 }
 
+.teacher-status-options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.teacher-option-buttons {
+  display: flex;
+  flex-direction: row;
+}
+
+.teacher-card-media-wrapper {
+  margin-top: -30px;
+}
+
 .weather-station-exit-button button {
   position: absolute !important;
   bottom: 0px;
