--- a/src/html/fonts.css
+++ b/src/html/fonts.css
@@ -1,78 +1,29 @@
-/* These fonts generated from https://icomoon.io/ using 'material' icon font  */
+
+
+
 @font-face {
-  font-family: 'weather-fonts';
-  src:
-    url('fonts/weather-fonts.ttf?qfprqx') format('truetype'),
-    url('fonts/weather-fonts.woff?qfprqx') format('woff'),
-    url('fonts/weather-fonts.svg?qfprqx#weather-fonts') format('svg');
+  font-family: "raindrops";
+  src: url("fonts/raindrops.woff") format("woff"),
+       url("fonts/raindrops.ttf") format("truetype"),
+       url("fonts/raindrops.svg#raindrops") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 
-[class^="icon-"], [class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'weather-fonts' !important;
-  speak: none;
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: "raindrops";
+    src: url("fonts/raindrops.svg#raindrops") format("svg");
+  }
+}
+
+[class^="raindrops-"]:before, [class*=" raindrops-"]:before,
+[class^="raindrops-"]:after, [class*=" raindrops-"]:after {
+  font-family: raindrops;
+  font-size: 20px;
   font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-
-.icon-cloud:before {
-  content: "\e900";
-}
-.icon-cloud-drizzle:before {
-  content: "\e901";
-}
-.icon-cloud-rain:before {
-  content: "\e902";
-}
-.icon-sun:before {
-  content: "\e903";
-}
-.icon-wind:before {
-  content: "\e904";
-}
-.icon-fast_forward:before {
-  content: "\e01f";
-}
-.icon-fast_rewind:before {
-  content: "\e020";
-}
-.icon-pause:before {
-  content: "\e034";
-}
-.icon-pause_circle_filled:before {
-  content: "\e035";
-}
-.icon-pause_circle_outline:before {
-  content: "\e036";
-}
-.icon-play_arrow:before {
-  content: "\e037";
-}
-.icon-play_circle_filled:before {
-  content: "\e038";
-}
-.icon-play_circle_outline:before {
-  content: "\e039";
-}
-.icon-refresh:before {
-  content: "\e5d5";
-}
-.icon-skip_next:before {
-  content: "\e044";
-}
-.icon-skip_previous:before {
-  content: "\e045";
-}
-.icon-album:before {
-  content: "\e019";
-}
+.raindrops-one:before { content: "\f101"; font-size: 16px; }
+.raindrops-two:before { content: "\f102"; }
+.raindrops-three:before { content: "\f100"; font-size: 28px; margin-left: 8px }
