--- a/src/html/weather.css
+++ b/src/html/weather.css
@@ -86,6 +86,7 @@ table.GridView td.set {
   font-size: 24px;
   font-weight: bold;
   line-height: 1.3em;
+  text-align: center;
 }
 
 .teacher-cell-popover-contents .station-id {
